# Kreator

./: .gitignore  CLAUDE.md  ISSUES.md  Makefile  README.md  TICKETS.md  TODO.md  k8s-starter-spec.md  kind-config.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_create_items.py
apps/backend/app/: config.py  database.py  main.py  models.py  schemas.py  telemetry.py
apps/backend/app/routes/: health.py  items.py
apps/frontend/: Dockerfile  README.md  package.json
argocd-apps/: backend.yaml  frontend.yaml  grafana.yaml  loki.yaml  mimir.yaml  postgres.yaml  promtail.yaml  tempo.yaml
charts/backend/: Chart.yaml  values.yaml
charts/frontend/: Chart.yaml  values.yaml
charts/postgres/: Chart.yaml  values.yaml
kreator/: __init__.py  main.py
kreator/commands/: deploy.py  destroy.py  dev.py  doctor.py  init.py
kreator/core/: cluster.py  config.py  observability.py  platform.py  registry.py  renderer.py  shell.py
kreator/providers/: aws.py  base.py  civo.py  local.py
platform/argocd/: install-values.yaml  root-app.yaml
platform/ingress/: install-values.yaml
platform/observability/: grafana-values.yaml  loki-values.yaml  mimir-values.yaml  promtail-values.yaml  tempo-values.yaml
scripts/: bootstrap.sh  build-images.sh  seal-secret.sh  smoke.sh  teardown.sh
secrets/sealed/: backend-secrets.yaml  (+1 more)
tests/: test_aws.py  test_cluster.py  test_config.py  test_doctor.py  test_dogfood.py  test_init.py  test_platform.py  test_prerequisites.py  test_renderer.py
(+152 files in other folders)
