[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kreator"
version = "0.1.0"
description = "CLI tool that scaffolds deployment-ready full-stack applications with Kubernetes, Crossplane, and ArgoCD"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.scripts]
kreator = "kreator.main:app"

[tool.setuptools.packages.find]
include = ["kreator*"]

[tool.setuptools.package-data]
kreator = ["py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
